[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Sonel <dmitriew.vsevolod@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.22"}
alembic = "^1.12.0"
asyncpg = "^0.28.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
pydantic-settings = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
